--- a/app/src/main/res/layout/activity_ingredients.xml
+++ b/app/src/main/res/layout/activity_ingredients.xml
@@ -4,17 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecipeStepsActivity"
+    tools:context=".IngredientsActivity"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/text_view"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="ingredientsIntent"/>
+        android:id="@+id/ingredients_text_view"/>
 
 </LinearLayout>
