--- a/app/src/main/res/layout/activity_recipe_steps.xml
+++ b/app/src/main/res/layout/activity_recipe_steps.xml
@@ -17,4 +17,9 @@
         android:layout_height="wrap_content"
         android:onClick="ingredientsIntent"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="stepsIntent"/>
+
 </LinearLayout>
