Recipe step details now has the correct information from the appropriate step selected from the steps recyclerview that was just implemented.

--- a/app/src/main/res/layout/activity_recipe_steps.xml
+++ b/app/src/main/res/layout/activity_recipe_steps.xml
@@ -22,4 +22,22 @@
         android:layout_height="wrap_content"
         android:onClick="stepsIntent"/>
 
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:overScrollMode="never">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/steps_recycler_view">
+
+        </android.support.v7.widget.RecyclerView>
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
+
 </LinearLayout>
