Formatting has been added so that the app matches the mock ups.

--- a/app/src/main/res/layout/activity_ingredients.xml
+++ b/app/src/main/res/layout/activity_ingredients.xml
@@ -10,6 +10,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/ingredients_text_view"/>
+        android:id="@+id/ingredients_text_view"
+        android:layout_margin="15dp"
+        android:textSize="18sp"
+        android:textStyle="bold"/>
 
 </LinearLayout>
