--- a/app/src/main/res/layout/step_list_item.xml
+++ b/app/src/main/res/layout/step_list_item.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="140dp"
+    android:background="@drawable/border"
+    android:layout_margin="15dp">
 
     <TextView
+        android:layout_margin="15dp"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:id="@+id/text_view_step_list_item"/>
+        android:layout_height="match_parent"
+        android:id="@+id/text_view_step_list_item"
+        android:textSize="24sp"
+        android:gravity="center"
+        tools:text="test"/>
 
 </LinearLayout>
