--- a/app/src/main/res/layout/activity_recipe_step_details.xml
+++ b/app/src/main/res/layout/activity_recipe_step_details.xml
@@ -21,6 +21,20 @@
         android:textSize="18sp"
         android:textStyle="bold"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/previous_button"
+        android:onClick="previousButton"
+        android:text="Previous"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/next_button"
+        android:onClick="nextButton"
+        android:text="Next"/>
+
 
 
 </LinearLayout>
