Back arrow "button" implemented on step details for initial implementation. This is just a regular button - not within the toolbar.

--- a/app/src/main/res/layout/activity_recipe_step_details.xml
+++ b/app/src/main/res/layout/activity_recipe_step_details.xml
@@ -35,6 +35,13 @@
         android:onClick="nextButton"
         android:text="Next"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/back_arrow"
+        android:onClick="backArrow"
+        android:text="Back Arrow"/>
+
 
 
 </LinearLayout>
