Back arrow implemented in the toolbar.

--- a/app/src/main/res/layout/activity_recipe_step_details.xml
+++ b/app/src/main/res/layout/activity_recipe_step_details.xml
@@ -7,6 +7,15 @@
     tools:context=".RecipeStepDetailsActivity"
     android:orientation="vertical">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_awesome_toolbar"
+        android:minHeight="?attr/actionBarSize"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:titleTextColor="@android:color/white"
+        android:background="?attr/colorPrimary">
+    </android.support.v7.widget.Toolbar>
+
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/player_view"
         android:layout_width="match_parent"
