--- a/app/src/main/res/layout/activity_recipe_step_details.xml
+++ b/app/src/main/res/layout/activity_recipe_step_details.xml
@@ -16,19 +16,16 @@
         android:background="?attr/colorPrimary">
     </android.support.v7.widget.Toolbar>
 
-    <com.google.android.exoplayer2.ui.PlayerView
-        android:id="@+id/player_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"></com.google.android.exoplayer2.ui.PlayerView>
-
-    <TextView
+<!--    <fragment
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/steps_text_view"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:textSize="18sp"
-        android:textStyle="bold"/>
+        android:name="com.example.android.bakingapp.StepDetailsFragment"
+        android:id="@+id/step_details_fragment_tag"/>-->
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/step_details_fragment_tag"></FrameLayout>
 
     <Button
         android:layout_width="wrap_content"
