--- a/app/src/main/res/layout/activity_recipe_step_details.xml
+++ b/app/src/main/res/layout/activity_recipe_step_details.xml
@@ -24,7 +24,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/step_details_fragment_tag"></FrameLayout>
 
     <Button
